--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -38,7 +38,7 @@ test:
 
 about:
   home: https://CRAN.R-project.org/package=tsoutliers
-  license: GPL (>= 2)
+  license: GPL-2.0-or-later
   summary: 'Detection of Outliers in Time Series.'
   license_family: GPL3
   license_file: '{{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-2'
